[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dummy-package"
version = "4.2.2"

authors = [
  { name="mehul Saxena ", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
] 